@@ -1,4 +1,4 @@
-MANIFEST for conflict, version t20040620
+MANIFEST for conflict, version t20040901
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 CHANGES                         change-log for 'conflict'
